--- a/modules/custom/rate_table/templates/rate-table.html.twig
+++ b/modules/custom/rate_table/templates/rate-table.html.twig
@@ -1,8 +1,8 @@
 <div class="rate_table" data-rate-table-vehicle-nid="48">
   <div class="rate_table_header">
-    <h4 class="rate_table_title">Labor Rates</h4>
+    <h4 class="rate_table_title">Labor <strong>Rates</strong></h4>
     <div class="rate_table_header_tab_section mdc-tab-bar">
-      <div class="rate_table_header_tab_elucid mdc-tab mdc-tab--active">Elucid Site<br/>Labor Rates</div>
+      <div class="rate_table_header_tab_elucid mdc-tab mdc-tab--active">Nolij Site<br/>Labor Rates</div>
       <div class="rate_table_header_tab_onsite mdc-tab">Government Site<br/>Labor Rates</div> 
       <span class="mdc-tab-bar__indicator"></span>
     </div>
@@ -31,6 +31,12 @@
         </div>
       </div>
     </div>
+    <div class="rate_table_footer">
+      <div class="rate_table_pagination">
+        <div class="rate_table_pagination_first">First</div><div class="rate_table_pagination_prev">Prev</div><div class="rate_table_pagination_links"></div><div class="rate_table_pagination_next">Next</div><div class="rate_table_pagination_last">Last</div>
+      </div>
+      <div class="rate_table_index"></div>
+    </div>
     <div class="rate_table_body_table_section">
       <table class="rate_table_table table table-striped">
         <thead>
@@ -57,11 +63,5 @@
         </tfoot>
       </table>
     </div>
-  </div>
-  <div class="rate_table_footer">
-    <div class="rate_table_pagination">
-      <div class="rate_table_pagination_first">First</div><div class="rate_table_pagination_prev">Prev</div><div class="rate_table_pagination_links"></div><div class="rate_table_pagination_next">Next</div><div class="rate_table_pagination_last">Last</div>
-    </div>
-    <div class="rate_table_index"></div>
   </div>
 </div>
