--- a/themes/elucid/sass/pages/portfolio.scss
+++ b/themes/elucid/sass/pages/portfolio.scss
@@ -108,7 +108,7 @@
   $default_medium_margin: 40px;
   $default_small_margin:  20px;
 
-  $default_font_family: 'Open Sans';
+  $default_font_family: 'Roboto', sans-serif;
   $default_text_color:  $gray-text;
 
   $large_screen_width:  950px;
