--- a/themes/elucid/templates/page--front.html.twig
+++ b/themes/elucid/templates/page--front.html.twig
@@ -83,6 +83,7 @@
     <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
     <!-- The React Container element -->
     <div id="nolij-react-app-container">Nolij App Container Loading.</div>
+    <div id="nolij-connect-container">Loading contact form...</div>
 {#
 /*
     {{ drupal_block ('homepage_banner_block') }}
@@ -116,7 +117,7 @@
       </div>
       <div class="footer_bottom">
         <div class="footer_bottom_left">
-          <div class="elucid_linkedin">Nolij Consulting on LinkedIn</div>
+          <div class="elucid_linkedin"><a href="https://www.linkedin.com/company/nolij-consulting-llc">Nolij Consulting on LinkedIn</a></div>
         </div>
         <div class="footer_bottom_right">
           <div class="credits">&copy; 2018 Nolij Consulting LLC</div>
