--- a/themes/elucid/templates/page--node--2.html.twig
+++ b/themes/elucid/templates/page--node--2.html.twig
@@ -80,11 +80,19 @@
   </div>
   {{ page.help }}
   <main role="main">
+    <div class="page-header">
+      <div class="header-container">
+        <h2>NITAAC CIOSP3</h2>
+        <div class="subtitle">Faster, easier, cost-competitive.</div>
+      </div>
+    </div>
     <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
     {{ drupal_block ('nitaac_banner_block') }}
     {{ page.content }}
-    {{ drupal_block ('contactusblock') }}
+    {{ drupal_block ('ratetableblock') }}
+    {# {{ drupal_block ('contactusblock') }} #}
     {{ drupal_block ('credentials_block') }}
+    <div id="nolij-connect-container">Loading contact form...</div>
   </main>
   <footer role="contentinfo">
     <div class="footer_content layout-padded-content">
