--- a/themes/elucid/templates/page--node--2880.html.twig
+++ b/themes/elucid/templates/page--node--2880.html.twig
@@ -80,6 +80,12 @@
   </div>
   {{ page.help }}
   <main role="main">
+    <div class="page-header">
+        <div class="header-container">
+            <h2>Careers</h2>
+            <div class="subtitle">Unleash your potential.</div>
+        </div>
+    </div>
     <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
     {{ page.content }}
     <div id="nolij-connect-container">Loading contact form...</div>
