--- a/themes/elucid/components/vehicles/sass/vehicles.scss
+++ b/themes/elucid/components/vehicles/sass/vehicles.scss
@@ -5,10 +5,11 @@
 .nolij-vehicles-container {
   @include styleguide;
 
+  background-image: url('/themes/elucid/components/services/images/grid-light-bg.svg');
+  background-size: 26px;
+
   .nolij-vehicles-component {
     @include padded-content-block(45px 25px 30px, 25px 10px);
-    background-color: white;
-    border: solid 18px #437ca5;
     @include mobile(border-width, 5px);
 
     .nolij-vehicles-component-header {
@@ -41,6 +42,9 @@
           text-transform: uppercase;
         }
         .nolij-vehicles-component-left-card {
+          display: flex;
+          flex-direction: column;
+          background-color: white;
           @include card;
           flex-grow: 1;
           margin-right: 25px;
@@ -58,6 +62,7 @@
             }
           }
           .nolij-vehicles-component-left-card-body {
+            flex: 1;
             padding: 0 25px;
             @include mobile(padding, 0 10px);
 
@@ -103,7 +108,7 @@
             border-top: solid 1px $gray-lightest;
             color: $gray-text;
             font-size: 16px;
-            padding: 15px 25px;
+            padding: 25px 25px;
             @include mobile(padding, 15px 10px);
 
             .nolij-vehicles-component-duns {
@@ -117,6 +122,7 @@
           }
         }
         .nolij-vehicles-component-right-card {
+          background-color: white;
           @include card;
           padding: 25px 15px 20px;
           width: 219px;
